--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.3",
     "hardhat": "^2.8.3"
+  },
+  "dependencies": {
+    "@openzeppelin/contracts": "^4.4.2",
+    "@uniswap/v3-periphery": "^1.4.0"
   }
 }
